// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<H1 /> renders with a color prop 1`] = `
<Component
  style={
    Array [
      Object {
        "color": "#fff",
        "fontSize": 34,
        "textAlign": "center",
      },
      undefined,
    ]
  }
>
  mockText
</Component>
`;

exports[`<H1 /> renders with just text 1`] = `
<Component
  style={
    Array [
      Object {
        "color": "#000000",
        "fontSize": 34,
        "textAlign": "center",
      },
      undefined,
    ]
  }
>
  mockText
</Component>
`;
